--- a/style.css
+++ b/style.css
@@ -34,12 +34,15 @@ td > span {
   font-size: calc(30vw / var(--grid-width));
 }
 
-td > div {
+td > input {
   position: absolute;
   width: 100%;
   margin-top: calc(15vw / var(--grid-width));
   text-align: center;
   font-size: calc(80vw / var(--grid-width));
+
+  background: transparent;
+  border: none;
 }
 
 .dark {
