--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ td > input {
   background-color: gray;
 }
 
-#hint {
+#clue {
   width: 100%;
   text-align: center;
   background-color: #A4ABFF;
