--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ td > input {
   width: 100%;
   margin-top: calc(15vw / var(--grid-width));
   text-align: center;
-  font-size: calc(80vw / var(--grid-width));
+  font-size: calc(75vw / var(--grid-width));
 
   background: transparent;
   border: none;
@@ -56,4 +56,20 @@ td > input {
   height: calc(100vw / var(--grid-width));
   font-size: calc(80vw / var(--grid-width));
   margin-top: 2vw;
+}
+
+#clue > input {
+  border:0;
+  background-color: #A4ABFF;
+  font-size: calc(80vw / var(--grid-width));
+  width: 59vw;
+}
+
+#clue > button {
+  background-color: yellow;
+  padding: 0;
+  font-size: calc(40vw / var(--grid-width));
+  width: 39vw;
+  height: 100%;
+  float: right;
 }
