--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ table {
 
 td {
   border: 1px solid black;
+  padding: 0;
   position: relative;
 }
 td:after {
@@ -50,6 +51,7 @@ td:after {
 td > span {
   position: absolute;
   font-size: calc(30vw / var(--grid-width));
+  background: white;
 }
 
 td > input {
@@ -64,8 +66,15 @@ td > input {
   padding: 0;
 }
 
-.circle {
-  background-color:palegreen
+.circle:before {
+  content: '';
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
 }
 
 .dark {
