--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ td > input {
   display: grid;
   grid-template-columns: 1fr 1fr;
   
-  font-size: 4vw;
+  font-size: 2vw;
+  font-family: Arial, sans-serif;
   margin-left: 0.5vw;
   margin-right: 0.5vw;
 }
@@ -126,6 +127,17 @@ td > input {
 #clues h3 {
   margin: 0;
   font-size: 6vw;
+}
+
+#clues ol {
+  margin: 0;
+}
+
+/* TODO update this from JS on each letter change it clue is done
+Also click the clue to get to the word? 
+Check Github bug */
+.finished {
+  color: grey;
 }
 
 #clues textarea {
