--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin: 0;
   overflow-x: hidden;
 }
@@ -11,15 +11,15 @@ body {
 h1 {
   text-align: center;
   margin: 0;
-  font-size: 8vw
+  font-size: 8vw;
 }
 
 #topleft {
   position: absolute;
   top: 0;
-  font-size: 6vw
+  font-size: 6vw;
 }
-input[type=checkbox] {
+input[type="checkbox"] {
   width: 4vw;
   height: 4vw;
   margin-top: 2.5vw;
@@ -69,7 +69,7 @@ td > input {
 }
 
 .circle:before {
-  content: '';
+  content: "";
   position: absolute;
   top: -1px;
   left: -1px;
@@ -86,7 +86,7 @@ td > input {
 #clue {
   width: 98vw;
   text-align: center;
-  background-color: #A4ABFF;
+  background-color: #a4abff;
   height: calc(100vw / var(--grid-width));
   font-size: calc(var(--font-scale, 1) * 80vw / var(--grid-width));
   margin-top: 2px;
@@ -96,7 +96,7 @@ td > input {
 
 #clue > input {
   border: 0;
-  background-color: #A4ABFF;
+  background-color: #a4abff;
   font-size: calc(80vw / var(--grid-width));
   width: 57vw;
 }
@@ -150,7 +150,7 @@ Check Github bug */
 
 #clues button {
   position: absolute;
-  left:40vw;
+  left: 40vw;
 }
 
 #measurer {
