--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin: 0;
   overflow: hidden;
-
   display: flex;
 }
 
@@ -146,18 +145,14 @@ td > input {
   height: 100vh;
   overflow-y: scroll;
   overflow-x: hidden;
+  flex: 1;
 }
 
 #clues {
   display: grid;
   grid-template-columns: 1fr 1fr;
-
-  width: calc(100vw - 100vh * (1 - 1 / var(--grid-height)));
-
   font-size: 2vh;
   font-family: Arial, sans-serif;
-  margin-left: 0.5vh;
-  margin-right: 0.5vh;
 }
 
 #clues h3 {
