--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
   margin: 0;
-  overflow: hidden;
+  overflow-y: hidden;
   display: flex;
 }
 
@@ -18,6 +18,7 @@ body {
   flex-direction: column;
   height: 100vh;
   width: calc(100vh * var(--grid-width) / (var(--grid-height) + 1));
+  flex-shrink: 0;
 }
 
 header {
@@ -149,11 +150,12 @@ td > input {
   overflow-y: scroll;
   overflow-x: hidden;
   flex: 1;
+  min-width: 20vh;
 }
 
 #clues {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(20vh, 1fr));
   font-size: 2vh;
   font-family: Arial, sans-serif;
 }
