Linked words drawn in color

--- a/style.css
+++ b/style.css
@@ -108,6 +108,10 @@ td > input {
   height: 100%;
 }
 
+.linkedTo {
+  background-color: #dec5ff;
+}
+
 .sameWord {
   background-color: #a4abff;
 }
