Prevent long clues from breaking UI
Fixes broken text width in 47-down in:
https://xw.carlwa.com/?id=uBBby9lz87Yzcf2wfjD2

"What_the_underlines_in_this_clue_show" clue is so long the word doesn't overflow vertically, so it wasn't resized smaller.

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ td > input {
   align-items: center;
   background-color: #a4abff;
   height: calc(min(100vh / var(--grid-height), 10vh));
+  overflow-wrap: anywhere;
 }
 
 #share {
